# ACE

./: .gitignore  LICENSE  Makefile  README.md  README_clean.md  grg.md  pyproject.toml  repomix-auditeur-expert.xml  repomix-output-opti.xml  repomix.config.json  repomix_auditeur_expert.json  si tu était eux
ace/: cli.py  main.py
ace/core/: sanctuary.py
ace/engine/: converter.py  detector.py  heuristic.py  inferencer.py  validator.py
ace/models/: chat.py
ace/processors/: tables.py
ace/utils/: dom.py  regex.py
docs/: audit_Vmonolithique+proposition d'archi-de-l'a.md  specs.md
docs/ACE/: V-light-ACE  master_blueprint.md
docs/OCE/: V_idéale-OCE.md
docs/chat/: prompt de clean.md  prompt_départ
docs/implementation/: 01_strategie_atomes.md  atom_00_foundations.md  atom_02_detector.md  atom_03_inferencer.md  kit_de_test.md
input/: Scraping stratégique GitHub.html  fallback.html  fallback_test.html  syshoplexe - Grok.html  test_audit.html  test_chat.html  test_chat.json  test_v11.html
legacy/samples/: math-_rizhome audit-_S_crit - DeepSeek.html
output/: conflict.md  demo_grok_v2.md  demo_grok_v4.md  extres-demo-grok.md  test_audit.md  test_chat.md
reports/: repomix-output-opti.xml
scripts/: diagnose_chms.py
temp/: CHMS_Causal-Hybrid-Mapping-System.html  CHMS_Causal-Hybrid-Mapping-System.md
tests/: conftest.py  test_atom_00.py  test_atom_01b.py  test_atom_02.py  test_atom_03.py  test_atom_05.py
testv1/: find_tag_v3.py  find_tag_v4.py  test_parse_2.py  test_parse_3.py  test_parse_4.py  test_parse_6.py  test_regex.py  test_regex_v2.py
(+29 files in other folders)
