[project]
name = "ace"
version = "0.1.0"
description = "Adaptive Chat Extractor - Une solution universelle pour l'extraction de conversations HTML."
dependencies = [
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
ace = "ace.main:main"

[tool.setuptools]
packages = ["ace"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
